workspace/second/src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>CatValues__c</fullName>
        <label>CatValues</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>conacc__c</fullName>
        <label>conacc</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Categorys</relationshipLabel>
        <relationshipName>Categorys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorys</pluralLabel>
    <recordTypes>
        <fullName>EmpType</fullName>
        <active>true</active>
        <label>EmpType</label>
    </recordTypes>
    <recordTypes>
        <fullName>empstatus</fullName>
        <active>false</active>
        <label>empstatus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>